--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KageNikki Ultimate</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="manifest" href="manifest.json">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>KageNikki Ultimate</title>
+<link rel="stylesheet" href="style.css">
+<link rel="manifest" href="manifest.json">
 </head>
 <body class="dark">
-  <header>
-    <h1>📖 KageNikki Ultimate</h1>
+<header>
+  <h1>📖 KageNikki Ultimate</h1>
+  <div>
     <button id="toggleTheme">Cambiar tema</button>
     <button id="profileBtn">Perfil</button>
-  </header>
-
-  <main id="app">
-    <!-- Secciones del diario, chat, tienda y social se cargan aquí -->
-  </main>
-
-  <script type="module" src="main.js"></script>
+  </div>
+</header>
+<main id="app"></main>
+<script type="module" src="main.js"></script>
 </body>
 </html>
